added a variables.sass file to store all Sass variables

--- a/public/sass/homepage.sass
+++ b/public/sass/homepage.sass
@@ -1,8 +1,5 @@
 /* HOMEPAGE STYLES */
-@use 'style'
-
-// File paths
-$assetPath: "/assets/images"
+@import './style', './variables'
 
 main
     background: url(#{$assetPath}/homepage.jpg)
