--- a/public/sass/login.sass
+++ b/public/sass/login.sass
@@ -1,12 +1,5 @@
 /* LOGIN STYLES */
-@use 'style'
-
-// Image folder path
-$assetPath: "/assets/images"
-
-// Colors
-$purple: #0000cc
-$amber: #ffaa4d
+@import './style', './variables' 
 
 main
   margin: 0 auto
@@ -22,7 +15,7 @@ label, h6
   color: $purple
 
 form 
-  border: 1px solid black
+  border: 1px solid $black
   background-color: $amber
   opacity: .9
   box-shadow: 0 0 10px rgb(0 0 0 / 96%)
