--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -1,4 +1,7 @@
+/* DASHBOARD STYLES */
 /* BASE REUSABLE STYLESHEET */
+/* COLORS */
+/* IMAGE FOLDER PATH */
 html, body {
   min-height: 100%;
 }
@@ -29,6 +32,9 @@ nav {
   padding: 2vh;
   min-width: 100vw;
   display: inline-block;
+}
+nav .btn-logout {
+  margin-left: 1em;
 }
 
 a, button {
@@ -82,10 +88,6 @@ button {
   color: #ffffff;
 }
 
-.btn-logout {
-  margin-left: 1em;
-}
-
 .btn-nav, .btn-logout {
   margin-right: 1.5vw;
   padding: 2em;
@@ -100,8 +102,7 @@ footer {
   position: relative;
   height: 2vh;
 }
-
-.copyright {
+footer .copyright {
   position: absolute;
   font-size: 2vh;
   bottom: 2vh;
@@ -114,12 +115,8 @@ footer {
   margin-left: 80px;
 }
 
-#btnSection {
-  margin-bottom: 25px;
-  margin-left: 80px;
-}
-
-/* DASHBOARD STYLES */
+/* COLORS */
+/* IMAGE FOLDER PATH */
 main {
   background: url(/assets/images/dashboard-image.png);
   background-position: center;
