--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,4 +1,7 @@
+/* LOGIN STYLES */
 /* BASE REUSABLE STYLESHEET */
+/* COLORS */
+/* IMAGE FOLDER PATH */
 html, body {
   min-height: 100%;
 }
@@ -29,6 +32,9 @@ nav {
   padding: 2vh;
   min-width: 100vw;
   display: inline-block;
+}
+nav .btn-logout {
+  margin-left: 1em;
 }
 
 a, button {
@@ -82,10 +88,6 @@ button {
   color: #ffffff;
 }
 
-.btn-logout {
-  margin-left: 1em;
-}
-
 .btn-nav, .btn-logout {
   margin-right: 1.5vw;
   padding: 2em;
@@ -100,8 +102,7 @@ footer {
   position: relative;
   height: 2vh;
 }
-
-.copyright {
+footer .copyright {
   position: absolute;
   font-size: 2vh;
   bottom: 2vh;
@@ -114,12 +115,8 @@ footer {
   margin-left: 80px;
 }
 
-#btnSection {
-  margin-bottom: 25px;
-  margin-left: 80px;
-}
-
-/* LOGIN STYLES */
+/* COLORS */
+/* IMAGE FOLDER PATH */
 main {
   margin: 0 auto;
   background: url(/assets/images/airplane-taking-off.jpg);
@@ -136,7 +133,7 @@ label, h6 {
 }
 
 form {
-  border: 1px solid black;
+  border: 1px solid #000000;
   background-color: #ffaa4d;
   opacity: 0.9;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.96);
