added a hover over the button

--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -5,7 +5,7 @@ html, body
   min-height: 100%
 
 #error-message
-  color: white
+  color: $white
 
 .wrapper 
   width: 100%
@@ -93,7 +93,3 @@ footer
     bottom: 2vh
     right: 2vh
     width: 100%
-
-#btnSection
- margin-bottom: 25px
- margin-left: 80px
