--- a/public/sass/variables.sass
+++ b/public/sass/variables.sass
@@ -10,9 +10,8 @@ $light-green: #2bff88
 $light-orange: #ff9a8b
 $purple: #0000cc
 $pink: #ff3399
-// login.sass
-$purple: #0000cc
 $amber: #ffaa4d
+$dark-red: #8b0000
 
 /* IMAGE FOLDER PATH */
 $assetPath: "/assets/images"
