--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 #error-message {
-  color: white;
+  color: #ffffff;
 }
 
 .wrapper {
@@ -107,11 +107,6 @@ footer .copyright {
   bottom: 2vh;
   right: 2vh;
   width: 100%;
-}
-
-#btnSection {
-  margin-bottom: 25px;
-  margin-left: 80px;
 }
 
 /*# sourceMappingURL=style.css.map */
