--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -41,12 +41,14 @@
         class='btn-login is-size-6-mobile is-size-6-desktop'
         type='submit'
       ><i class='icon-unlock icon-large pr-2'></i>Login</button>
+      <span id='login-error' class='p-5'></span>
     </div>
     <br />
     <h6><b>Need to create account?</b>
-      <button id='create-account' class='btn-login is-size-7-mobile is-size-7-desktop'><i
-          class='icon-user pr-2'
-        ></i>Click Here!</button></h6>
+      <button
+        id='create-account'
+        class='btn-login is-size-7-mobile is-size-7-desktop'
+      ><i class='icon-user pr-2'></i>Click Here!</button></h6>
   </form>
 
   <!--SIGNUP FORM -->
@@ -102,6 +104,7 @@
         class='button btn-login is-size-6-mobile is-size-6-desktop'
         type='submit'
       ><i class='icon-pencil icon-large pr-2'></i>Signup</button>
+      <span id='signup-error' class='p-5'></span>
     </div>
   </form>
   <br />
