--- a/public/sass/login.sass
+++ b/public/sass/login.sass
@@ -20,9 +20,14 @@ form
   opacity: .9
   box-shadow: 0 0 10px rgb(0 0 0 / 96%)
   border-radius: 15px
+  #login-error, #signup-error
+    color: $purple
 
 .icon-remove-styles
   cursor: pointer  
+  color: $black
+  &:hover
+    color: $dark-red
 
 
 
