--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,9 +5,9 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>Travel Lovers</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <style> 
-      
-      </style>
+    <style>
+
+    </style>
     <!-- Link Bulma CSS -->
     <link
       rel='stylesheet'
@@ -37,7 +37,6 @@
         </div>
         <div class='navbar-end'>
           <div class='navbar-item'>
-            <div id='error-message' class='p-5'></div>
             <div class='buttons'>
               <a href='/'><button class='btn-nav'><i
                     class='icon-home icon-large pr-2'
@@ -61,15 +60,17 @@
       </nav>
     </header>
     <main>
-      <div class="body">
-      {{{body}}}
+      <div class='body'>
+        {{{body}}}
       </div>
     </main>
     <footer class='footer is-size-6-mobile is-size-5-tablet is-size-4-desktop'>
       <div class='content has-text-centered'>
         Thanks for visiting!
       </div>
-      <div class='copyright is-size-7-mobile is-size-6-tablet is-size-5-desktop has-text-right'>
+      <div
+        class='copyright is-size-7-mobile is-size-6-tablet is-size-5-desktop has-text-right'
+      >
         Made by Travel Lovers
         <div>&copy; 2022 Travel Lovers, Inc.</div>
       </div>
